--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.2.54",
     "@types/react-dom": "18.2.18",
     "autoprefixer": "10.4.17",
+    "axios": "^1.6.7",
     "next": "14.1.0",
     "postcss": "8.4.34",
     "react": "18.2.0",
