--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.7",
     "@types/node": "20.11.16",
     "@types/react": "18.2.54",
     "@types/react-dom": "18.2.18",
@@ -18,7 +21,11 @@
     "postcss": "8.4.34",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll-up": "^1.4.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
+  },
+  "devDependencies": {
+    "@types/material-ui": "^0.21.16"
   }
 }
